fix: card body text alignment

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -38,7 +38,7 @@
   max-width: 100%;
 }
 .card-head {
-  height: 70%;
+  height: 72%;
   display: flex;
   justify-content: center;
   position: relative;
@@ -52,8 +52,17 @@
   left: 0;
 }
 
-.responsive-img {
-  height: 40%;
-  border-top-right-radius: 8px;
-  border-top-left-radius: 8px;
+.card-name {
+  font-size: 16px;
+}
+
+.card-price {
+  font-size: 14px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 28%;
 }
